--- a/HelloWorldServlet/war/WEB-INF/web.xml
+++ b/HelloWorldServlet/war/WEB-INF/web.xml
@@ -5,6 +5,28 @@
 	version="2.4">
 
 	<!-- Configure Spring MVC -->
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
+
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>
+            /WEB-INF/springapp-servlet.xml
+        </param-value>
+	</context-param>
+
+	<filter>
+		<filter-name>AccessFilter</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+
+	<filter-mapping>
+		<filter-name>AccessFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
+
 	<servlet>
 		<servlet-name>springapp</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
