--- a/Portal/.project
+++ b/Portal/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Portal</name>
+	<name>HelloWorldServlet</name>
 	<comment></comment>
 	<projects>
 	</projects>
