--- a/AppServer/etc/etc/appServer.properties
+++ b/AppServer/etc/etc/appServer.properties
@@ -1,5 +1,7 @@
 # Mode in which the AppServer is running
 appServer.mode=DEVELOPMENT
+appserver.working.dir=C:/temp
+appServer.scratchdir=C:/temp
 
 # Security options
 appServer.security.DOSPrevention=true
