--- a/AppServer/etc/etc/appServer.properties
+++ b/AppServer/etc/etc/appServer.properties
@@ -11,3 +11,8 @@ appServer.scratchdir=C:/temp/scratch2
 ### Security options ###
 # Request-Time which is detected as a DOS-attack (in ms)
 appServer.security.DOSPrevention.time=40000
+
+### Security manager configuration ###
+appServer.security.manager.java.url=file:/C:/Program%20Files%20(x86)/Java/jre6/lib/-
+appServer.security.manager.java.dir=C:/Program Files(x86)/Java/jdk1.6.0_14/-
+appserver.security.manager.server=D:/work/mscWolke/trunk/dev/Libs/-
