--- a/AppServer/etc/etc/appServer.properties
+++ b/AppServer/etc/etc/appServer.properties
@@ -13,6 +13,9 @@ appServer.scratchdir=C:/temp/scratch2
 appServer.security.DOSPrevention.time=40000
 
 ### Security manager configuration ###
-appServer.security.manager.java.url=file:/C:/Program%20Files%20(x86)/Java/jre6/lib/-
-appServer.security.manager.java.dir=C:/Program Files(x86)/Java/jdk1.6.0_14/-
-appserver.security.manager.server=D:/work/mscWolke/trunk/dev/Libs/-
+# Autodetect
+#appServer.security.manager.java.url=file:/C:/Program%20Files%20(x86)/Java/jre6/lib/-
+# Autodetect
+#appServer.security.manager.java.dir=C:/Program Files(x86)/Java/jdk1.6.0_14/-
+# Autodetect 
+#appserver.security.manager.server=D:/work/mscWolke/trunk/dev/Libs/-
